# medical_copilot

./: .coverage  .env.example  .gitignore  Dockerfile  Makefile  README.md  diagnostic.py  pyproject.toml  requirements.txt  run_server.py  run_tests.py  test_apis.py  troubleshooting.md
config/: config.yaml
src/: main.py
src/agents/: alternative_explanation_generator.py  diagnosis_generator.py  llm_judge.py  medical_knowledge_retriever.py  risk_evaluator.py  symptom_extractor.py
src/api/: routes.py
src/config/: settings.py
src/core/: diagnostic.py  symptom_intake.py
src/medical_copilot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: neo4j_client.py  neo4j_manager.py  perplexity_checker.py  safety_compliance.py
src/workflow/: medical_workflow.py
tests/: test_medical_workflow.py
