[project]
name = \"medical_copilot\"
version = \"0.1.0\"
description = \"Multi-agent AI Health Copilot using GenAI\"
authors = [\"Vikkas Arun Pareek <vapmail16@gmail.com>\"]
readme = \"README.md\"
requires-python = \">=3.10\"
package-mode = false
dependencies = [
    \"openai\",
    \"langchain\",
    \"langgraph\",
    \"neo4j\",
    \"python-dotenv\",
    \"streamlit\",
    \"requests\"
]

[tool.setuptools]
package-dir = {\"\" = \"src\"}
